cudaq/test/Transforms/apply-forward-declared-trap.qke
// ========================================================================== //
// Copyright (c) 2022 - 2026 NVIDIA Corporation & Affiliates.                 //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt -convert-to-qir-api %s -verify-diagnostics

// A quake.apply that survives to codegen could not be specialized (here its
// callee was only forward-declared, so apply-op-specialization left it in
// place). At codegen the kernel is fully processed, so the apply is
// unambiguously unlowerable and must be diagnosed rather than silently trapped.
// See: https://github.com/NVIDIA/cuda-quantum/issues/4268

func.func private @test(!quake.ref)

func.func @__nvqpp__mlirgen__kernel() attributes {"cudaq-entrypoint", "cudaq-kernel"} {
  %0 = quake.alloca !quake.ref
  // expected-error@+1 {{could not generate the specialized form of kernel 'test'; its body was not available (it may be only forward-declared)}}
  quake.apply <adj> @test %0 : (!quake.ref) -> ()
  return
}
